@@ -1,15 +1,13 @@
 .. _setup_system:
 
 ####################################
-Installing basic packages (RH based)
+Installing basic packages (CentOS 7)
 ####################################
 
 This documentation page will describe which packages are to be installed on the system.
 
-Instructions for both RedHat6 and CentOS6 will be provided.
-
 Please note that most of the steps are the same for both systems. When anything will differ, it will
-be clearly pointed out. 
+be clearly pointed out.
 
 ============
 CentOS setup
@@ -17,29 +15,26 @@ CentOS setup
 
 Here you can find the ISO image used to install the OS:
 
-* http://mi.mirror.garr.it/mirrors/CentOS/6.5/isos/x86_64/CentOS-6.5-x86_64-minimal.iso
+* http://mi.mirror.garr.it/mirrors/CentOS/7/isos/x86_64/CentOS-7-x86_64-Everything-1503-01.iso
 
 Initial OS installation
 -----------------------
 
-When the bootload starts, select "Install or upgrade an existing system"
- - Check disk integrity if you need to, otherwise press "skip"
- - OS presentation: press Next
- - Choose language
+When the bootload starts, select "Install CentOS7"
+ - Choose language for the installation process and click continue
  - Choose keyboard layout
- - Choose a device type, following the suggestions (probably "Basic storage devices" will work)
- - There will be a warning about the storage device; being on a VM, it will be empty, 
-   so let's proceed selecting "Yes, discard any data"
- - Host name: specify a name here or leave the default one
- - You may now configure the network (button "config network"), 
-   but we'll setup it later from a terminal.
- - Choose a city to select the time zone
+ - Set Date and Time
+ - There will be a warning about the installation destination "Automatic partitioning selected".
+   Notice that by default the installer will use an XFS FileSystem for the boot partition and will
+   use LVM for the rest of the system.
+ - You may now configure the network (button "config network").If you do so you will also be able to setup
+   NTP time synchronization in the Time and Date section
+ - Choose wich applications will be installed on the system by clicking on Software Selection,
+   we will choose "Minimal".
+ - Click Begin Installation
  - Create a password for the root user
- - Choose the type of disk installation: "Use All Space".
-    - If you need, choose "Create Custom Layout" and proceed with the related screens    
- - Click on "Write changes to disk"
 
-The install procedure will go on installing a basic set of packages. 
+The install procedure will go on installing a basic set of packages.
 At the end you will be requested to reboot the system.
 
 
@@ -47,7 +42,13 @@ At the end you will be requested to reboot the system.
 Network configuration
 =====================
 
-Edit the file ``/etc/sysconfig/network-scripts/ifcfg-eth0`` paying attention to these properties::
+If you configured the network interface during the installation process you skip this section
+
+List the network interfaces
+
+service network status
+
+Edit the config file for the intercafe ``/etc/sysconfig/network-scripts/<interface name>`` paying attention to these properties::
 
    BOOTPROTO="static"
    ONBOOT="yes"
@@ -70,12 +71,12 @@ Check the connection is up by pinging and external server::
 
    ping google.com
 
-.. attention:: 
-   Please note that in CentOS6 only ssh incoming connections are allowed; 
+.. attention::
+   Please note that in CentOS7 only ssh incoming connections are allowed;
    all other incoming connections are disabled by default.
-          
+
    In the paragraph related to the httpd service you can find details about
-   how to enable incoming traffic. 
+   how to enable incoming traffic.
 
 Note that after configuring the network, you may continue installing the system setup using a ssh connection.
 
@@ -86,17 +87,30 @@ Installing base packages
 Internal clock sync
 -------------------
 
-Install the program for ntp server synchronization::
+CentOS 7 default is to use Chrony::
 
-   yum install ntp
+Install Chrony with the following command::
 
-Edit ``/etc/ntp.conf`` and add the following line before the first ``server`` directive::
+    yum install -y chrony
 
-   server tempo.ien.it     # Galileo Ferraris
+Edit /etc/chrony.conf with the desired settings. For example you can sync with
+the CentOS servers::
 
-Sync with the server by issuing::
+  # Use public servers from the pool.ntp.org project.
+  # Please consider joining the pool (http://www.pool.ntp.org/join.html).
+  server 0.centos.pool.ntp.org iburst
+  server 1.centos.pool.ntp.org iburst
+  server 2.centos.pool.ntp.org iburst
+  server 3.centos.pool.ntp.org iburst
+  ...
 
-   service ntpdate start
+Start it::
+
+    systemctl start chronyd
+
+And enable it to autostart at boot::
+
+    systemctl enable chronyd
 
 
 Other utilities
@@ -104,10 +118,7 @@ Other utilities
 
 Install::
 
-  yum install man
-  yum install vim
-  yum install openssh-clients    # also needed for incoming scp connections
-  yum install mc                 # mc (along with zip) can be used to navigate inside .war files
+  yum install mc            # mc (along with zip) can be used to navigate inside .war files
   yum install zip unzip
   yum install wget
 
@@ -118,51 +129,46 @@ Installing PostgreSQL and PostGIS
 Repositories
 ------------
 
-Update the packages list::
-
-  yum check-update
-  
 Download the package for configuring the PGDG repository:
-
-RedHat::
-
-  wget http://yum.postgresql.org/9.2/redhat/rhel-6-x86_64/pgdg-redhat92-9.2-7.noarch.rpm
 
 CentOS::
 
-  wget http://yum.postgresql.org/9.2/redhat/rhel-6-x86_64/pgdg-centos92-9.2-6.noarch.rpm
-  
+  wget http://yum.postgresql.org/9.4/redhat/rhel-7-x86_64/pgdg-centos94-9.4-1.noarch.rpm
+
 and install it::
-  
-  rpm -ivh pgdg-centos92-9.2-6.noarch.rpm
 
-EPEL 6 repository will provide GDAL packages::
+  rpm -ivh pgdg-centos94-9.4-1.noarch.rpm
 
-  yum install epel-release --enablerepo=extras
+EPEL 7 repository will provide GDAL packages::
+
+  wget http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-5.noarch.rpm
+  rpm -ivh epel-release-7-5.noarch.rpm
+
+Update the packages list::
+
+    yum clean all
+    yum check-update
 
 Install PG::
 
-  yum install postgresql92-server postgis2_92
+  yum install postgresql94-server postgis2_94
 
 Verify::
 
-  [root@cerco ~]# rpm -qa | grep postg
-  postgresql-libs-8.4.13-1.el6_3.x86_64
-  postgresql92-9.2.2-1PGDG.rhel6.x86_64
-  postgresql92-server-9.2.2-1PGDG.rhel6.x86_64  
-  postgresql92-libs-9.2.2-1PGDG.rhel6.x86_64
-  postgis2_92-2.0.2-1.rhel6.x86_64
-  [root@cerco ~]#
+  # rpm -qa | grep postg
+  postgresql94-libs-9.4.4-1PGDG.rhel7.x86_64
+  postgresql94-9.4.4-1PGDG.rhel7.x86_64
+  postgis2_94-2.1.8-1.rhel7.x86_64
+  postgresql94-server-9.4.4-1PGDG.rhel7.x86_64
 
 Init the DB::
 
-  service postgresql-9.2 initdb
-  
+  /usr/pgsql-9.4/bin/postgresql94-setup initdb
 
 Setting PostgreSQL access
 -------------------------
 
-Edit the file ``/var/lib/pgsql/9.2/data/pg_hba.conf`` so that the local connection entries 
+Edit the file ``/var/lib/pgsql/9.4/data/pg_hba.conf`` so that the local connection entries
 will change to::
 
   # "local" is for Unix domain socket connections only
@@ -178,19 +184,18 @@ will change to::
   # IPv6 local connections:
   host    all             postgres        ::1/128                 ident
   host    all             all             ::1/128                 md5
-   
+
 
 Setup automatic start
 ---------------------
 
 Configure automatic service startup at boot time ::
 
-  chkconfig --level 2345 postgresql-9.2 on
-  chkconfig --add postgresql-9.2
+  systemctl enable postgresql-9.4
 
 Start the service right now ::
 
-  service postgresql-9.2 start
+  systemctl start postgresql-9.4
 
 
 =====================
@@ -201,7 +206,7 @@ Creating system users
 
 Create tomcat user
 ------------------
-:: 
+::
 
   [root@cerco ~]# adduser -m -s /bin/bash tomcat
   [root@cerco ~]# passwd tomcat
@@ -211,7 +216,7 @@ Create tomcat user
 Installing  apache httpd
 ========================
 
-Apache httpd is used as entry point for web accesses. 
+Apache httpd is used as entry point for web accesses.
 It will be configured as a reverse proxy for the requests to the running web applications.
 
 Install httpd::
@@ -226,16 +231,16 @@ If no name is assigned to the IP address assigned to this machine, we'll set the
 
 Configure the automatic start at boot ::
 
-  chkconfig --level 2345 httpd on
+  systemctl enable httpd
 
 Start the service right away ::
 
-  service httpd start
+  systemctl start httpd
 
-Check if the machine is reachable from outside, pointing your browser to:: 
+Check if the machine is reachable from outside, pointing your browser to::
 
   http://84.33.2.27
-  
+
 If you cannot reach the machine, proceed with next section.
 
 Configure incoming requests
@@ -243,12 +248,9 @@ Configure incoming requests
 
 If the machine is not reachable from the outside, allow the incoming connections by issuing this command::
 
-  iptables -I INPUT -p tcp --dport 80 -j ACCEPT
+  firewall-cmd --zone=public --add-port=80/tcp --permanent
+  firewall-cmd --reload
 
-you can then save the ``iptables`` configuration (in order to retain it through reboots) issuing ::
-
-  service iptables save
-  
 Configuring httpd
 -----------------
 
@@ -267,120 +269,35 @@ Installing java
 CentOS
 ------
 
+::
+
 For CentOS systems, you can download the JDK RPM from this page:
 
   http://www.oracle.com/technetwork/java/javase/downloads/index.html
 
-Oracle does not expose a URL to automatically dowload the JDK because an interactive licence acceptance is requested.  
+Oracle does not expose a URL to automatically dowload the JDK because an interactive licence acceptance is requested.
 You may start downloading the JDK RPM from a browser, and then either:
 
-You can:
 * stop the download from the browser and use on the server the dynamic download URL your browser has been assigned, or
-* finish the download and transfer the JDK RPM to the server using ``scp``.   
+* finish the download and transfer the JDK RPM to the server using ``scp``.
 * install the RPM using the following command line
 
 ::
 
   rpm -ivh jdk-7u51-linux-x64.rpm
 
-Alternatively you can use the following commands:
-
-::
-
-    wget --no-check-certificate --no-cookies --header "Cookie: oraclelicense=accept-securebackup-cookie" http://download.oracle.com/otn-pub/java/jdk/7u71-b14/jdk-7u71-linux-x64.tar.gz
-    tar xzvf jdk-7u71-linux-x64.tar.gz
-    mkdir /usr/java
-    mv jdk1.7.0_71/ /usr/java/
-
-    alternatives --install /usr/bin/java java /usr/java/jdk1.7.0_71/bin/java 20000
-    alternatives --install /usr/bin/javac javac /usr/java/jdk1.7.0_71/bin/javac 20000
-    alternatives --install /usr/bin/jar jar /usr/java/jdk1.7.0_71/bin/jar 20000
-    alternatives --install /usr/bin/javaws javaws /usr/java/jdk1.7.0_71/bin/javaws 20000
-
-    alternatives --set java /usr/java/jdk1.7.0_71/bin/java
-    alternatives --set javac /usr/java/jdk1.7.0_71/bin/javac
-    alternatives --set jar /usr/java/jdk1.7.0_71/bin/jar
-    alternatives --set javaws /usr/java/jdk1.7.0_71/bin/javaws
-
 Verify the proper installation on the JDK::
 
   # java -version
-  java version "1.7.0_71"
-  Java(TM) SE Runtime Environment (build 1.7.0_71-b13)
-  Java HotSpot(TM) 64-Bit Server VM (build 24.71-b03, mixed mode) 
+  java version "1.7.0_79"
+  Java(TM) SE Runtime Environment (build 1.7.0_79-b13)
+  Java HotSpot(TM) 64-Bit Server VM (build 24.79-b03, mixed mode)
   # javac -version
-  javac 1.7.0_71
-  
-  
-RedHat
-------
+  javac 1.7.0_79
 
-On RedHat system you may already have the OpenJDK package (``java-1.7.0-openjdk.x86_64``) installed::
-
-   # yum list *openjdk*
-   [...]
-   Installed Packages
-   java-1.6.0-openjdk.x86_64                                                                                                   1:1.6.0.0-3.1.13.1.el6_5                                                                                           @rhel-x86_64-server-6
-   java-1.6.0-openjdk-devel.x86_64                                                                                             1:1.6.0.0-3.1.13.1.el6_5                                                                                           @rhel-x86_64-server-6
-   java-1.6.0-openjdk-javadoc.x86_64                                                                                           1:1.6.0.0-3.1.13.1.el6_5                                                                                           @rhel-x86_64-server-6
-   java-1.7.0-openjdk.x86_64                                                                                                   1:1.7.0.51-2.4.4.1.el6_5                                                                                           @rhel-x86_64-server-6
-   java-1.7.0-openjdk-devel.x86_64                                                                                             1:1.7.0.51-2.4.4.1.el6_5                                                                                           @rhel-x86_64-server-6
-   Available Packages
-   java-1.7.0-openjdk-javadoc.noarch                                                                                           1:1.7.0.51-2.4.4.1.el6_5                                                                                           rhel-x86_64-server-6 
-   #
-   
-   # java -version
-   java version "1.7.0_51"
-   OpenJDK Runtime Environment (rhel-2.4.4.1.el6_5-x86_64 u51-b02)
-   OpenJDK 64-Bit Server VM (build 24.45-b08, mixed mode)
-   # javac -version
-   javac 1.7.0_51       
 
 You may want anyway to use the Oracle JDK.
 
-You should download and install the RPM as described in the CentOS section.
-
-Once installed, you still see that the default ``java`` and ``javac`` commands 
-are still the ones from OpenJDK.
-In order to switch JDK version you have to set the proper system `alternatives`.
-
-You may want to refer to `this page <http://www.rackspace.com/knowledge_center/article/how-to-install-the-oracle-jdk-on-fedora-15-16>`_ .
-Issue the command::
-
-   alternatives --install /usr/bin/java java /usr/java/latest/bin/java 200000 \
-   --slave /usr/lib/jvm/jre jre /usr/java/latest/jre \
-   --slave /usr/lib/jvm-exports/jre jre_exports /usr/java/latest/jre/lib \
-   --slave /usr/bin/keytool keytool /usr/java/latest/jre/bin/keytool \
-   --slave /usr/bin/orbd orbd /usr/java/latest/jre/bin/orbd \
-   --slave /usr/bin/pack200 pack200 /usr/java/latest/jre/bin/pack200 \
-   --slave /usr/bin/rmid rmid /usr/java/latest/jre/bin/rmid \
-   --slave /usr/bin/rmiregistry rmiregistry /usr/java/latest/jre/bin/rmiregistry \
-   --slave /usr/bin/servertool servertool /usr/java/latest/jre/bin/servertool \
-   --slave /usr/bin/tnameserv tnameserv /usr/java/latest/jre/bin/tnameserv \
-   --slave /usr/bin/unpack200 unpack200 /usr/java/latest/jre/bin/unpack200 \
-   --slave /usr/share/man/man1/java.1 java.1 /usr/java/latest/man/man1/java.1 \
-   --slave /usr/share/man/man1/keytool.1 keytool.1 /usr/java/latest/man/man1/keytool.1 \
-   --slave /usr/share/man/man1/orbd.1 orbd.1 /usr/java/latest/man/man1/orbd.1 \
-   --slave /usr/share/man/man1/pack200.1 pack200.1 /usr/java/latest/man/man1/pack200.1 \
-   --slave /usr/share/man/man1/rmid.1.gz rmid.1 /usr/java/latest/man/man1/rmid.1 \
-   --slave /usr/share/man/man1/rmiregistry.1 rmiregistry.1 /usr/java/latest/man/man1/rmiregistry.1 \
-   --slave /usr/share/man/man1/servertool.1 servertool.1 /usr/java/latest/man/man1/servertool.1 \
-   --slave /usr/share/man/man1/tnameserv.1 tnameserv.1 /usr/java/latest/man/man1/tnameserv.1 \
-   --slave /usr/share/man/man1/unpack200.1 unpack200.1 /usr/java/latest/man/man1/unpack200.1
-
-Then run ::
-  
-   alternatives --config java
-   
-and select the number related to ``/usr/java/latest/bin/java``.
-
-Now the default java version should be the Oracle one::
- 
-   # java -version
-   java version "1.7.0_51"
-   OpenJDK Runtime Environment (rhel-2.4.4.1.el6_5-x86_64 u51-b02)
-   OpenJDK 64-Bit Server VM (build 24.45-b08, mixed mode)
-   
 .. _deploy_tomcat:
 
 ========================
@@ -392,38 +309,11 @@ CentOS
 
 ::
 
-    yum install tomcat6-webapps
-    ln -s /etc/init.d/tomcat6 /etc/init.d/solr
-    cp /etc/sysconfig/tomcat6 /etc/sysconfig/solr
-    
-    ln -s /usr/share/tomcat6/ /opt/tomcat
+    wget http://it.apache.contactlab.it/tomcat/tomcat-7/v7.0.63/bin/apache-tomcat-7.0.63.tar.gz
+    tar xvf apache-tomcat-7.0.63.tar.gz
 
-Update the ``/etc/sysconfig/solr`` environment variables accordingly :: 
-
-    # vi /etc/sysconfig/solr
-
-    CATALINA_BASE="/var/lib/tomcat/solr"
-    CATALINA_HOME="/opt/tomcat"
-    CATALINA_PID=$CATALINA_BASE/work/pidfile.pid
-
-    JAVA_HOME="/usr/java/jdk1.7.0_71"
-    
-    JAVA_OPTS="$JAVA_OPTS -Xms512m -Xmx800m -XX:MaxPermSize=256m"
-
-    JAVA_OPTS="$JAVA_OPTS -Dsolr.solr.home=/etc/solr/"
-    JAVA_OPTS="$JAVA_OPTS -Dsolr.data.dir=$CATALINA_BASE/data"
-
-Others
-------
-
-Download apache tomcat and install it under ``/opt``::
-
-  wget http://mirror.nohup.it/apache/tomcat/tomcat-6/v6.0.39/bin/apache-tomcat-6.0.39.tar.gz
-  tar xzvf apache-tomcat-6.0.39.tar.gz -C /opt/
-
-Let's use a symlink to ease future upgrades::
-
-  ln -s /opt/apache-tomcat-6.0.39/ /opt/tomcat
+    mv apache-tomcat-7.0.63 /opt/
+    ln -s /opt/apache-tomcat-7.0.63 /opt/tomcat
 
 
 .. _create_catalina_base:
@@ -437,6 +327,5 @@ Creating `base/` template directory
 
 ::
 
-  mkdir -p /var/lib/tomcat/base/{bin,conf,logs,temp,webapps,work}
-  cp /opt/tomcat/conf/* /var/lib/tomcat/base/conf/
-
+  mkdir -p /opt/tomcat/base/{bin,conf,logs,temp,webapps,work}
+  cp -r /opt/tomcat/conf/* /opt/tomcat/base/conf/
